--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
+cramjam==2.11.0
 dash==2.18.2
-plotly==5.24.1
-pandas==2.2.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+fastparquet==2024.11.0
+flask==3.0.3
+fsspec==2025.10.0
 gunicorn==23.0.0
-pyarrow
-fastparquet
+idna==3.11
+importlib-metadata==8.7.0
+itsdangerous==2.2.0
+jinja2==3.1.6
+markupsafe==3.0.3
+nest-asyncio==1.6.0
+numpy==2.0.2
+packaging==25.0
+pandas==2.2.3
+plotly==5.24.1
+polars==1.35.2
+polars-runtime-32==1.35.2
+pyarrow==21.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+retrying==1.4.2
+setuptools==80.9.0
+six==1.17.0
+tenacity==9.1.2
+typing-extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+werkzeug==3.0.6
+zipp==3.23.0
